# Midori-AI

./: .gitignore  .gitmodules  AGENTS.md  Midori-AI-OSS-Github.code-workspace  README.MD
Experimentation/codexd/: AGENTS.md  install.sh  pyproject.toml  uninstall.sh
Experimentation/codexd/src/codexd/: __init__.py  app_server.py  cli.py  importer.py  installer.py  launcher.py  models.py  paths.py  ranking.py  registry.py  service.py  session_snapshot.py
Experimentation/codexd/tests/: test_app_server.py  test_cli.py  test_importer.py  test_installer.py  test_launcher.py  test_ranking.py  test_registry.py  test_service.py
Experimentation/dnd-agent-game/: .gitignore  Cargo.toml  README.md  config.toml  local-config.toml
Experimentation/dnd-agent-game/schemas/: agent_turn.schema.json  dm_turn.schema.json  dm_whisper_decision.schema.json  identity_decision.schema.json  identity_proposal.schema.json  player_turn.schema.json
Experimentation/dnd-agent-game/src/: codex_runner.rs  config.rs  main.rs  persistence.rs  types.rs
Experimentation/midori-ai-radio-studio/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  run.sh
Experimentation/midori-ai-radio-studio/packaging/: org.midoriai.RadioStudio.desktop  org.midoriai.RadioStudio.metainfo.xml
Experimentation/midori-ai-radio-studio/src/: backend.rs  main.rs
Experimentation/midori-ai-radio-studio/src/qml/: Main.qml
Experimentation/radiostation-manager/: .gitignore  prompts.base.toml  pyproject.toml  run.sh  update-song-metadata.sh
Experimentation/radiostation-manager/gui/: app.py  main.py
Experimentation/radiostation-manager/gui/core/: config.py  essentia_client.py  library_worker.py  metadata.py  opencode_client.py  prompts.py  song.py
Experimentation/radiostation-manager/gui/resources/: style.qss
Experimentation/radiostation-manager/gui/tests/: test_app.py
Experimentation/radiostation-manager/gui/widgets/: cache_vibes.py  channel_manager.py  comment_editor.py  components.py  diff_dialog.py  import_flow.py  library_browser.py  main_menu.py  prompt_manager.py  rate_past_songs.py  search_manage.py  stale_comments.py
(+196 files in other folders)
