[project]
name = "codexd"
version = "0.1.0"
description = "Manage multiple Codex subscriptions with isolated CODEX_HOME trees."
authors = [
    { name = "lunamidori5", email = "jaredteam@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "tomli-w>=1.2.0",
]

[project.scripts]
codexd = "codexd:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
