[package]
name = "midori-ai-radio-studio"
version = "0.1.0"
edition = "2021"
description = "A KDE-native music and prompt manager for Midori AI Radio"
license = "MIT"
publish = false

[dependencies]
cxx = "1.0.192"
cxx-qt = "0.8.0"
cxx-qt-lib = { version = "0.8.0", features = ["qt_full"] }
cxx-qt-lib-extras = "0.8"
dirs = "6.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
