[project]
name = "luna-music-metadata-studio"
version = "0.1.0"
description = "GUI for managing Midori AI Radio music metadata and AI prompts"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10",
]

[project.scripts]
luna-studio = "gui.main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gui*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
